[package]
name = "graphiti_oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symbolic_expressions = "5.0.3"
lexpr = "0.2.7"
